# py-network-luncher

./: .gitignore  LICENSE  README.md  main.py  py-network-launcher.spec  pyproject.toml
.github/workflows/: windows-build.yml
installer/: build-installer.ps1  py-network-launcher.iss
src/: __main__.py  desktop_entry.py  discovery.py  executor.py  main_window.py  models.py  runtime_paths.py  service.py  startup.py  storage.py  system_tray.py  ui_components.py
src/py_network_launcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
